fixed 2nd section vertical slider again with overflow

--- a/Savy - Cyber Security Web/style.css
+++ b/Savy - Cyber Security Web/style.css
@@ -156,7 +156,7 @@ body {
     height: 100vh;
     z-index: -10;
     position: relative;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .body-section__providers__bg-right {
